00_backups/playground/_archive/kubernetes/chemicals/oxygen/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oxygen
spec:
  rules:
    - host: "oxygen.192-168-39-234.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: oxygen
                port:
                  number: 80
